fix p spacing in group-preview

--- a/res/less/components/group.less
+++ b/res/less/components/group.less
@@ -118,6 +118,10 @@
     p {
         margin: 1rem 0 0;
         color: @color-text-light;
+
+        &:first-of-type {
+            margin-top: 0;
+        }
     }
 }
 
